# morpho-twin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: cbf_demo.yaml  cstr_demo.yaml  full_demo.yaml  linear_demo.yaml  mhe_demo.yaml  nmpc_demo.yaml
docs/: OPERATOR_GUIDE.md  acados.md  acceptance_criteria.md  architecture.md  math_principles.md
experiments/: README.md  koopman_cstr.py  koopman_tube_mpc.py  koopman_tube_mpc_robust.py
src/ddt/: cli.py  config.py  events.py  factory.py  interfaces.py  metrics.py  utils.py
src/ddt/baselines/: pid.py
src/ddt/control/: __init__.py  nmpc_base.py  nmpc_casadi.py  nmpc_rti.py  rti_timing.py  warm_start.py
src/ddt/control/dual_control/: __init__.py  fim_compute.py  probing_cost.py
src/ddt/control/ocp/: __init__.py  (+3 more)
src/ddt/estimation/: __init__.py  innovation_monitor.py  windowed_ls.py
src/ddt/runtime/: simulate.py
src/ddt/safety/: __init__.py  barriers.py  cbf_qp.py  robust_margin.py  state_box.py
src/ddt/sim/: __init__.py  cstr.py  linear_scalar.py
src/ddt/supervision/: __init__.py  mode_manager.py  pe_monitor.py  supervisor.py
tests/integration/: test_closed_loop_smoke.py  test_cstr_benchmark.py  test_mhe_closed_loop.py  test_nmpc_closed_loop.py  test_supervised_loop.py
tests/unit/: test_barriers.py  test_cbf_qp.py  test_fim_compute.py  test_innovation_monitor.py  test_input_alignment.py  test_mode_manager.py  test_nmpc_stop_gradient.py  test_pe_monitor.py  test_rti_timing.py  test_solver_failures.py  test_solver_structure.py  test_stop_gradient.py  test_supervisor.py
(+11 files in other folders)
