[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ddt"
version = "0.1.0"
description = "Scaffold for causally-correct differentiable digital twins (MHE + dual-control NMPC + CBF safety)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "typer>=0.9",
  "rich>=13.6",
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
  "pre-commit>=3.6",
]
jax = [
  "jax>=0.4.20",
]
qp = [
  "osqp>=0.6.3",
]
acados = [
  "casadi>=3.6.5",
  "acados_template>=0.1.0",
]

[project.scripts]
ddt = "ddt.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
